@@ -267,7 +267,7 @@ insofar as they get compiled into the games; note that the include
 files are probably irrelevant for this purpose as it is unlikely they
 are significant enough to make any binary a derived work).
 
-   Copyright (c) 1997, 1998, 1999, 2000, 2001 Joseph Samuel Myers.
+   Copyright (c) 1997, 1998, 1999, 2000, 2001, 2002 Joseph Samuel Myers.
    All rights reserved.
 
    Redistribution and use in source and binary forms, with or without
